# wiiu_hb_installer

./: Cargo.toml  README.md  build.rs  links.json
src/: consts.rs  copy.rs  downloader.rs  legend.rs  links.rs  main.rs  usb.rs
