[package]
name = "wiiu_hb_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
console = "0.15.1"
indicatif = "0.17.0"
phf = { version = "0.11.1", features = ["macros"] }
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thread-control = { git = "https://github.com/DenisKolodin/thread-control", version = "0.1.2" }
zip = "0.6.2"
